# wordle_me_this

./: .gitignore  README.md  main.py  pyproject.toml
wordle_me_this/: __main__.py  cli.py  const.py  ops.py
